<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:scrollbars = "vertical"
    android:scrollbarStyle="insideInset">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/MaterialAlertDialog.MaterialComponents.Title.Panel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ngoProfile">

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_details_cardview"
            style="@style/Widget.MaterialComponents.CardView"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            app:cardElevation="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ngo_profile_photo"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_margin="0dp"
                    android:elevation="10dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/ngo_name_ngo_profile_frag"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/ngo_name_ngo_profile_frag"
                    style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                    android:layout_width="247dp"
                    android:layout_height="33dp"
                    android:elevation="10dp"
                    android:hint="@string/ngo_name"
                    android:padding="3sp"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/headline_ngo_profile"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/headline_ngo_profile"
                    android:layout_width="248dp"
                    android:layout_height="62dp"
                    android:elevation="10dp"
                    android:hint="Headline"
                    android:padding="3sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_details_cardview">

            <Button
                android:id="@+id/about_us_btn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3sp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue"
                android:padding="3sp"
                android:text="@string/about_us"
                android:textColor="@color/white"
                app:cornerRadius="0dp"
                app:rippleColor="@color/ripple_effect" />

            <Button
                android:id="@+id/donate_btn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3sp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue"
                android:padding="3sp"
                android:text="@string/donate"
                android:textColor="@color/white"
                app:cornerRadius="0dp"
                app:rippleColor="@color/ripple_effect" />
        </LinearLayout>

        <View
            android:id="@+id/horizontal_line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/teal_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="527dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontal_line" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotation="-40"
            android:text="Firebase recycler view post will be shoun here"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/horizontal_line" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
